Ship Sranko, home redesign, Veveno N+1 fixes, and FastAPI in prod compose.
Add the Sranko hobby stack (FE/API/ML), unify hobby landings, batch Brew list queries with on-duty badges, harden .gitignore for deploy, and run FastAPI beside Spring in docker-compose.prod.yml.

Co-authored-by: Cursor <cursoragent@cursor.com>